{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 74,
  "lineage": "e63d3108-152e-9ebb-c079-6f9baec5a2b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_istory_nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b09b6acd8d62254",
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:instance/i-02aad8ada3cb44641",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2CodeDeployProfile",
            "id": "i-02aad8ada3cb44641",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0205c76a150af94d7",
            "private_dns": "ip-10-0-1-156.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-3-36-94-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.94.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048ae099c452dd002",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094f5705b3252eb69",
            "tags": {
              "Environment": "Development",
              "Name": "istory nginx-server"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "istory nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03099830e3fb046c9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_codedeploy_role",
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.istory_nginx_sg",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc",
            "tls_private_key.ec2_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dangtong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:internet-gateway/igw-0ca88e735c77a81d1",
            "id": "igw-0ca88e735c77a81d1",
            "owner_id": "314146313665",
            "tags": {
              "Name": "dangtong-igw"
            },
            "tags_all": {
              "Name": "dangtong-igw"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "istory_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:loadbalancer/app/istory-alb/4afe5726cb6a2280",
            "arn_suffix": "app/istory-alb/4afe5726cb6a2280",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "istory-alb-261570035.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:loadbalancer/app/istory-alb/4afe5726cb6a2280",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "istory-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02da100be77c01e45"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03202571907007dbe"
              },
              {
                "subnet_id": "subnet-08ea40b4c57efb40c"
              },
              {
                "subnet_id": "subnet-094f5705b3252eb69"
              },
              {
                "subnet_id": "subnet-0ea58748ce50cf88f"
              }
            ],
            "subnets": [
              "subnet-03202571907007dbe",
              "subnet-08ea40b4c57efb40c",
              "subnet-094f5705b3252eb69",
              "subnet-0ea58748ce50cf88f"
            ],
            "tags": {
              "Environment": "Production",
              "Name": "istory-alb"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "istory-alb"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.istory_alb_sg",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "istory_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:listener/app/istory-alb/4afe5726cb6a2280/0eb48130c5cdcbe8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:targetgroup/istory-tg/7eae4b989b19fc9c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:listener/app/istory-alb/4afe5726cb6a2280/0eb48130c5cdcbe8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:loadbalancer/app/istory-alb/4afe5726cb6a2280",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.istory_alb",
            "aws_lb_target_group.istory_tg",
            "aws_security_group.istory_alb_sg",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "istory_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:targetgroup/istory-tg/7eae4b989b19fc9c",
            "arn_suffix": "targetgroup/istory-tg/7eae4b989b19fc9c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "302",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:targetgroup/istory-tg/7eae4b989b19fc9c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:314146313665:loadbalancer/app/istory-alb/4afe5726cb6a2280"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "istory-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dangtong-vpc-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:route-table/rtb-08d886e28742148de",
            "id": "rtb-08d886e28742148de",
            "owner_id": "314146313665",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca88e735c77a81d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dangtong-vpc-public-rt"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dangtong-vpc-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0301f5d0dc0195cf8",
            "route_table_id": "rtb-08d886e28742148de",
            "subnet_id": "subnet-094f5705b3252eb69"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad710fe0598d1272",
            "route_table_id": "rtb-08d886e28742148de",
            "subnet_id": "subnet-0ea58748ce50cf88f"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013d7ab8e9e155efe",
            "route_table_id": "rtb-08d886e28742148de",
            "subnet_id": "subnet-03202571907007dbe"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1da86f00091df62",
            "route_table_id": "rtb-08d886e28742148de",
            "subnet_id": "subnet-08ea40b4c57efb40c"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:security-group/sg-02da100be77c01e45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02da100be77c01e45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "istory alb sg20250322073840883600000001",
            "name_prefix": "istory alb sg",
            "owner_id": "314146313665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istory-alb-sg"
            },
            "tags_all": {
              "Name": "istory-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:security-group/sg-03099830e3fb046c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03099830e3fb046c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "istory nginx sg20250322052137566300000004",
            "name_prefix": "istory nginx sg",
            "owner_id": "314146313665",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_prod_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:security-group/sg-0e819eebcf591acc6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e819eebcf591acc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02da100be77c01e45"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "istory prod ec2 sg20250322073843523700000002",
            "name_prefix": "istory prod ec2 sg",
            "owner_id": "314146313665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istory-prod-ec2-sg"
            },
            "tags_all": {
              "Name": "istory-prod-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.istory_alb_sg",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:security-group/sg-04dc12a8cae989732",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dc12a8cae989732",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03099830e3fb046c9",
                  "sg-0e819eebcf591acc6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "istory rds sg20250322052140156000000006",
            "name_prefix": "istory rds sg",
            "owner_id": "314146313665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istory-rds-sg"
            },
            "tags_all": {
              "Name": "istory-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.istory_alb_sg",
            "aws_security_group.istory_nginx_sg",
            "aws_security_group.istory_prod_ec2_sg",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dangtong-vpc-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:subnet/subnet-094f5705b3252eb69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f5705b3252eb69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146313665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-a"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-a"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:subnet/subnet-0ea58748ce50cf88f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea58748ce50cf88f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146313665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-b"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-b"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:subnet/subnet-03202571907007dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03202571907007dbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146313665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-c"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-c"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:subnet/subnet-08ea40b4c57efb40c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ea40b4c57efb40c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146313665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-d"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-d"
            },
            "vpc_id": "vpc-0899e5c24cc5257dc"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dangtong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:314146313665:vpc/vpc-0899e5c24cc5257dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0965263d7e20e4ec2",
            "default_route_table_id": "rtb-0060fd37f1830c865",
            "default_security_group_id": "sg-08b4904d8c6640de4",
            "dhcp_options_id": "dopt-0c7cd67e22de0dffc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0899e5c24cc5257dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0060fd37f1830c865",
            "owner_id": "314146313665",
            "tags": {
              "Name": "dangtong-vpc"
            },
            "tags_all": {
              "Name": "dangtong-vpc"
            }
          }
        }
      ]
    }
  ]
}